force-app/main/default/objects/blng__BillingTransaction__c/blng__BillingTransaction__c.object-meta.xml
<CustomObject>
    <label>Billing Transaction</label>
    <nameField>
        <label>Billing Transaction Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Billing Transactions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>