force-app/main/default/objects/blng__BillingTransaction__c/fields/DMA_Invoice_Plan_Line_Processing_Order__c.field-meta.xml
<CustomField>
    <fullName>DMA_Invoice_Plan_Line_Processing_Order__c</fullName>
    <formula>blng__InvoicePlanLine__r.blng__ProcessingOrder__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoice Plan Line Processing Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>