force-app/main/default/objects/blng__BillingTransaction__c/fields/DMA_Order__c.field-meta.xml
<CustomField>
    <fullName>DMA_Order__c</fullName>
    <formula>CASESAFEID(blng__BillingSchedule__r.blng__OrderProduct__r.OrderId)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Order</label>
    <type>Text</type>
</CustomField>