force-app/main/default/objects/blng__BillingTransaction__c/fields/DMA_Test__c.field-meta.xml
<CustomField>
    <fullName>DMA_Test__c</fullName>
    <label>DMA_Test</label>
    <length>255</length>
    <type>Text</type>
</CustomField>